--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,24 @@
+.producto{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.25fr 0.25fr 1fr;
+    width:300px;
+    height: fit-content;
+    text-align: center;
+    font-size: medium;
+    border: 2.5px solid black;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+.productInfo{
+    display: flex;
+    flex-direction: column;
+    
+    
+}
+
 p{
-    color: blue;
+    color: black;
 }
 
 ul{
